novo SEO do estudae

--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -11,7 +11,7 @@
 }
 
 :root{
-  --corDestaque: #7FFD00;
+  --corDestaque: #0dff00;
   --corFonteBtn: #000;
   --corFundo: #000;
   --corFonte: #ffffff;
