--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -191,16 +191,12 @@
 <div class="container">
   <h3>Olá, Estudante!</h3>
 
-  <img src="{{ url_for('static', filename='img/ads-3_20250516_112345_0000.png') }}" alt="Redes Sociais">
+  <img src="{{ url_for('static', filename='img/banner.png') }}" alt="Redes Sociais">
      
   <h3>Explore nossos recursos</h3>
 
   <div class="mapa-btn">
-    <!--
-    <img src="{{ url_for('static', filename='img/corretor.png') }}" alt="Corretor de Redação" data-link="/redacao">
-    <img src="{{ url_for('static', filename='img/conteudos.png') }}" alt="Conteúdos Educacionais" data-link="/feed/artigos">
-    <img src="{{ url_for('static', filename='img/sessoes.png') }}" alt="Sessões de Estudos" data-link="/feed-session">
-  -->
+
     <div>
       <h4>Corretor de Redações</h4>
       <p>Corrija sua redação com a ajuda da IA! E conte com o apoio em tempo real da Redação Guiada!</p>
@@ -232,24 +228,5 @@
 
   
 </div>
-
-<script>
-  document.addEventListener('DOMContentLoaded', function() {
-    const elementosClicaveis = document.querySelectorAll('[data-link]');
-    
-    elementosClicaveis.forEach(elemento => {
-      elemento.addEventListener('click', () => {
-        window.location.href = elemento.getAttribute('data-link');
-      });
-    });
-
-    // Exibição do nome do usuário
-    const usernameElement = document.getElementById('username-placeholder');
-    if (usernameElement) {
-      const username = '{{ user.username }}' || 'Visitante';
-      usernameElement.textContent = `Olá, ${username}`;
-    }
-  });
-</script>
 
 {% endblock %}
