--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -21,11 +21,11 @@
 }
 
 .swal2-popup {
-        background: rgba(255, 255, 255, 0.2);
-        backdrop-filter: blur(10px);
-        -webkit-backdrop-filter: blur(10px);
-        border: 1px solid rgba(255, 255, 255, 0.3);
-        border-radius: 10px;
+        background: #000;
+        
+        border: 1px solid #fff;
+        border-radius: 6px;
+ color: #fff;
 }
 
 body.dark-mode{
